@@ -33,7 +33,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicReference;
 
 
-
 public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
 
     private static final Cache<Tuple4<IItemStack, Map<String, DataAccess>, Boolean, Boolean>, PriceCxnItemStackImpl> CACHE
@@ -139,9 +138,9 @@ public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
         JsonObject jsonObject = item.priceCxn$getComponentsAsJson();
         if (jsonObject == null) return new JsonObject();
 
-        if (jsonObject.get("minecraft:custom_data") instanceof JsonPrimitive) {
-            PriceCxn.getMod().getLogger().warn("Found no custom_data in item: " + item.priceCxn$getItemName());
-            return new JsonObject();
+        if (!jsonObject.has("minecraft:custom_data")
+                || jsonObject.get("minecraft:custom_data") instanceof JsonPrimitive) {
+            return jsonObject;
         }
         return jsonObject.getAsJsonObject("minecraft:custom_data");
     }
@@ -206,7 +205,8 @@ public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
     @Override
     public @NotNull JsonObject getDataWithoutDisplay() {
         JsonObject data = this.data.deepCopy();
-        data.get(COMMENT_KEY).getAsJsonObject().remove("display");
+        if (data.has(COMMENT_KEY) && data.get(COMMENT_KEY).isJsonObject())
+            data.get(COMMENT_KEY).getAsJsonObject().remove("display");
         return data;
     }
 
@@ -367,12 +367,15 @@ public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
 
                 if (searches.length > 1) {
                     String[] nbtSearches = searches[1].split("\\.");
-                    String commentSearch = data.get(PriceCxnItemStackImpl.COMMENT_KEY).getAsJsonObject().toString();
+                    if (data.get(PriceCxnItemStackImpl.COMMENT_KEY).isJsonObject()){
+                        String commentSearch = data.get(PriceCxnItemStackImpl.COMMENT_KEY).getAsJsonObject().toString();
 
-                    for (String s : nbtSearches) {
-                        if (!commentSearch.contains(s)) continue outer;
+                        for (String s : nbtSearches) {
+                            if (!commentSearch.contains(s)) continue outer;
+                        }
+                    }else {
+                        PriceCxn.getMod().getLogger().warn("comment is not a JsonObject: {}", data);
                     }
-
                 }
 
                 foundItems.add(i);
@@ -382,7 +385,7 @@ public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
         }
 
         if (foundItems.size() == 1) {
-            return array.get(foundItems.getFirst()).getAsJsonObject();
+            return array.get(foundItems.get(0)).getAsJsonObject();
         }
 
         return null;
@@ -435,7 +438,8 @@ public final class PriceCxnItemStackImpl implements PriceCxnItemStack {
         if (client.isCurrentScreenNull())
             return 1;
 
-        String inventoryTitle = client.getInventory().getTitle();;
+        String inventoryTitle = client.getInventory().getTitle();
+        ;
         if (inventoryTitle == null)
             return 1;
 
